--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -19,7 +19,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:key="firmware_version_screen"
-    android:title="@string/firmware_version"
+    android:title="バージョン Firmware"
     settings:keywords="@string/keywords_android_version">
 
     <!-- Bootleggers About logo -->
@@ -32,14 +32,14 @@
     <Preference
         android:key="btlg_about_info"
         android:order="1"
-        android:title="@string/about_bootleg_small_title"
-	    android:summary="@string/about_bootleg_small_summary"
+        android:title="私についてAbout"
+	    android:summary="Our projects information"
         android:fragment="com.bootleggers.dumpster.fragments.AboutBootleggers" />
 
     <!-- ROM Version -->
     <Preference
         android:key="modversion"
-        android:title="@string/rom_version_title"
+        android:title="バージョンBootleggers Roms"
         android:summary="@string/device_info_default"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.ROMVersionPreferenceController"/>
@@ -47,28 +47,28 @@
     <!-- Build date, parsed by locale -->
     <Preference
         android:key="build_date"
-        android:title="@string/bootleggers_build_date"
+        android:title="建設日 `Kensetsu-bi"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.ROMBuildDatePreferenceController"/>
 
     <!-- ROM Release type -->
     <Preference
         android:key="release_type"
-        android:title="@string/bootleg_ri_title_buildtype"
+        android:title="ブートレガーType"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.ROMBuildTypePreferenceController"/>
 
     <!-- ROM Maintainer, in case of Shsihufied Builds-->
     <Preference
         android:key="who_to_blame"
-        android:title="@string/maintainer"
+        android:title="メンテナ `Mentena"
         android:summary="@string/maintainer_name"
         settings:enableCopying="true" />
 
     <!-- Android version -->
     <Preference
         android:key="os_firmware_version"
-        android:title="@string/firmware_version"
+        android:title="バージョン Android"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionDetailPreferenceController"/>
@@ -76,7 +76,7 @@
     <!-- Security patch -->
     <Preference
         android:key="security_key"
-        android:title="@string/security_patch"
+        android:title="Android `セキュリティパッチレベル"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.SecurityPatchLevelPreferenceController"/>
 
@@ -91,14 +91,14 @@
     <!-- Our silly musical codename-->
     <Preference
         android:key="music_codename"
-        android:title="@string/bootleg_ri_title_musicode"
+        android:title="音楽コードネームCodename"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.ROMusicCodenamePreferenceController"/>
 
     <!-- Baseband -->
     <Preference
         android:key="base_band"
-        android:title="@string/baseband_version"
+        android:title="ベースバンドBaseband"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.BasebandVersionPreferenceController"/>
@@ -106,7 +106,7 @@
     <!-- Kernel -->
     <Preference
         android:key="kernel_version"
-        android:title="@string/kernel_version"
+        android:title="カーネルKernel"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.KernelVersionPreferenceController"/>
@@ -114,7 +114,7 @@
     <!-- Build -->
     <Preference
         android:key="os_build_number"
-        android:title="@string/build_number"
+        android:title="ビルド番号 Bangō"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.SimpleBuildNumberPreferenceController"/>
