res: firmware version name fix

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -19,7 +19,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:key="firmware_version_screen"
-    android:title="バージョン Firmware"
+    android:title="Bootleggers Home"
     settings:keywords="@string/keywords_android_version">
 
     <!-- Bootleggers About logo -->
@@ -32,14 +32,14 @@
     <Preference
         android:key="btlg_about_info"
         android:order="1"
-        android:title="私についてAbout"
+        android:title="私について`About"
 	    android:summary="Our projects information"
         android:fragment="com.bootleggers.dumpster.fragments.AboutBootleggers" />
 
     <!-- ROM Version -->
     <Preference
         android:key="modversion"
-        android:title="バージョンBootleggers Roms"
+        android:title="バージョン`Bootleggers-rom"
         android:summary="@string/device_info_default"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.ROMVersionPreferenceController"/>
@@ -54,7 +54,7 @@
     <!-- ROM Release type -->
     <Preference
         android:key="release_type"
-        android:title="ブートレガーType"
+        android:title="ブートレガー`Type"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.ROMBuildTypePreferenceController"/>
 
@@ -69,7 +69,7 @@
     <!-- Android version -->
     <Preference
         android:key="os_firmware_version"
-        android:title="バージョン Android"
+        android:title="バージョン `Android"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionDetailPreferenceController"/>
@@ -77,7 +77,7 @@
     <!-- Security patch -->
     <Preference
         android:key="security_key"
-        android:title="Android `セキュリティパッチレベル"
+        android:title="`セキュリティ `Security"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.SecurityPatchLevelPreferenceController"/>
 
@@ -92,14 +92,14 @@
     <!-- Our silly musical codename-->
     <Preference
         android:key="music_codename"
-        android:title="音楽コードネームCodename"
+        android:title="音楽コードネーム`Codename"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.ROMusicCodenamePreferenceController"/>
 
     <!-- Baseband -->
     <Preference
         android:key="base_band"
-        android:title="ベースバンドBaseband"
+        android:title="ベースバンド`Baseband"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.BasebandVersionPreferenceController"/>
@@ -107,7 +107,7 @@
     <!-- Kernel -->
     <Preference
         android:key="kernel_version"
-        android:title="カーネルKernel"
+        android:title="カーネル`Kernel"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.KernelVersionPreferenceController"/>
@@ -115,7 +115,7 @@
     <!-- Build -->
     <Preference
         android:key="os_build_number"
-        android:title="ビルド番号 Bangō"
+        android:title="ビルド番号 `Namba"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.SimpleBuildNumberPreferenceController"/>
