--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -20,6 +20,11 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:key="top_level_settings">
 
+    <PreferenceScreen
+        android:layout="@layout/etnalized"
+        android:key="anu_anuan"
+        android:order="-140" />
+
     <Preference
         android:key="top_level_network"
         android:title="@string/network_dashboard_title"
